# vortex-mod-mega

./: Cargo.toml  README.md  plugin.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
src/: api_client.rs  crypto.rs  error.rs  key_parser.rs  lib.rs  node_parser.rs  plugin_api.rs  url_matcher.rs
tests/: folder_e2e.rs  wasm_smoke.rs
tests/fixtures/: api_g_response.json
