[package]
name = "vortex-mod-mega"
version = "1.0.0"
edition = "2021"
description = "MEGA WASM plugin for Vortex — resolves mega.nz files/folders and exposes AES-128-CTR + chunk MAC for host-side decryption"
license = "GPL-3.0"
authors = ["vortex-community"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extism-pdk = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
thiserror = "2.0"
base64 = "0.22"
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"

[dev-dependencies]
extism = "1.0"
rstest = "0.24"
hex-literal = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
